# pyScarpFit

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: chicken_springs_work-checkpoint.ipynb
Notebooks/: birdseye_work.ipynb  chicken_springs_work.ipynb  ferris_mtns_work.ipynb  nevada_work.ipynb  scarp_centering_test.ipynb  test.ipynb  test2.ipynb
src/: scarp_fit.py
test_data/: scarp1_1.las
